# Optimizacion

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pl_solver/: app.py  big_m.py  exporter.py  parser.py  sensitivity.py  simplex_big_m_generator.py  solver.py  tableau_sensitivity.py  visualizer.py
src/pl_solver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_parser.py
