[project]
name = "pl-solver"
version = "0.1.0"
description = "Linear Programming Solver with Streamlit UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32.0",
    "plotly>=5.20.0",
    "scipy>=1.12.0",
    "sympy>=1.12.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
